edited index structure

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
-    <script src="chromtris.js"></script>
-    <link href="chromtris.css" media="screen" rel="stylesheet" type="text/css"></link>
+    <script src="js/chromtris.js"></script>
+    <script src="js/philoGL.js"></script>
+    <link href="css/chromtris.css" media="screen" rel="stylesheet" type="text/css"></link>
   </head>
-  <body>
-    <div id="editor"></div>
+  <body onload="startChromtris">
+    <canvas id="canvas" style="border: none;" width="500" height="500"></canvas>
   </body>
 </html>
