Added basic object structure

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
-    <script src="js/chromtris.js"></script>
-    <script src="js/philoGL.js"></script>
+    <script src="js/object.js"></script>
+    <script src="js/chromtris.js"></script>    
+    <script src="js/grid.js"></script>
     <link href="css/chromtris.css" media="screen" rel="stylesheet" type="text/css"></link>
   </head>
-  <body onload="startChromtris">
-    <canvas id="canvas" style="border: none;" width="500" height="500"></canvas>
+  <body>
+    <div id="ChromTris"></div>
+    <pre id="ChromTrisConsole"></div>
   </body>
 </html>
