improved project structure, changed chromtris.js

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
     <script src="js/common/constants.js"></script>
     <script src="js/chromtris.js"></script>    
     <script src="js/keys.js"></script> 
-    <script src="js/overlay.js"></script>
-    <script src="js/canvas.js"></script>
-    
-    <!-- REMOVE -->
-    <script src="js/object.js"></script>
-    <script src="js/grid.js"></script>
+    <script src="js/ui/overlay.js"></script>
+    <script src="js/ui/canvas.js"></script>
     
   </head>
   <body>
