Modified some of the files

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7, IE=9">
     
-    <link href="css/chromtris.css" media="screen" rel="stylesheet" type="text/css"></link>
-    <link href='http://fonts.googleapis.com/css?family=Nova+Round:regular' rel='stylesheet' type='text/css'>
+    <link href="css/chromtris.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Nova+Round:regular' rel='stylesheet' type='text/css' />
     
     <script src="js/common/enums.js"></script>
     <script src="js/common/constants.js"></script>
