--- a/popup.html
+++ b/popup.html
@@ -7,23 +7,14 @@
     <link href="css/chromtris.css" media="screen" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Nova+Round:regular' rel='stylesheet' type='text/css' />
     
-    <script src="js/common/enums.js"></script>
-    <script src="js/common/constants.js"></script>
-    <script src="js/common/object.js"></script>
-    <script src="js/chromtris.js"></script>    
-    <script src="js/keys.js"></script> 
-    <script src="js/ui/overlay.js"></script>
-    <script src="js/ui/canvas.js"></script>
-    <script src="js/ui/debug.js"></script>
+    <script src="js/chromtris-min.js"></script>
     
   </head>
   <body>
     <div id="header">ChromTris</div>
     <div id="ChromTrisBackground"></div>
     <canvas id="ChromTrisCanvas" width="400" height="500"></canvas>
-    <canvas id="ChromTrisOverlay" width="400" height="550"></canvas>
-    <pre id="ChromTrisConsole"></pre>
-    <pre id="ChromTrisErrorConsole"></pre>    
+    <canvas id="ChromTrisOverlay" width="400" height="550"></canvas> 
     <div id="score"></div>
     <div id="footer"></div>
   </body>
