--- a/popup.html
+++ b/popup.html
@@ -18,13 +18,12 @@
     
   </head>
   <body>
-    <div id="header">ChromTris</div>
-    <div id="ChromTrisBackground"></div>
-    <canvas id="ChromTrisCanvas" width="400" height="500"></canvas>
-    <canvas id="ChromTrisOverlay" width="400" height="550"></canvas>
-    <pre id="ChromTrisConsole"></pre>
-    <pre id="ChromTrisErrorConsole"></pre>    
-    <div id="score"></div>
-    <div id="footer"></div>
-  </body>
-</html>
+    <script>
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-XXXXXXXX-X']);
+        _gaq.push(['_trackPageview']);
+        
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = 'https://ssl.google-analytics.com/ga.js';
+            var s = document.getElementsB
