--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
   <body>
     <script>
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-XXXXXXXX-X']);
+        _gaq.push(['_setAccount', 'UA-16884739-3']);
         _gaq.push(['_trackPageview']);
         
         (function() {
