--- a/popup.html
+++ b/popup.html
@@ -10,14 +10,13 @@
     <script src="js/common/enums.js"></script>
     <script src="js/common/constants.js"></script>
     <script src="js/common/object.js"></script>
+    <script src="js/common/area.js"></script>
+    <script src="js/common/highscore.js"></script>
     <script src="js/chromtris.js"></script>    
     <script src="js/keys.js"></script> 
     <script src="js/ui/overlay.js"></script>
     <script src="js/ui/canvas.js"></script>
     <script src="js/ui/debug.js"></script>
-    
-  </head>
-  <body>
     <script>
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-16884739-3']);
@@ -29,11 +28,13 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
-  
+  </head>
+  <body>  
     <div id="header">ChromTris</div>
     <div id="ChromTrisBackground"></div>
     <canvas id="ChromTrisCanvas" width="400" height="500"></canvas>
     <canvas id="ChromTrisOverlay" width="400" height="550"></canvas>
+    <img id="ChromTrisLoader" src="images/loader.gif" width="31" height="31"></div>
     <pre id="ChromTrisConsole"></pre>
     <pre id="ChromTrisErrorConsole"></pre>    
     <div id="score"></div>
