--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,9 @@
     <div id="ChromTrisBackground"></div>
     <canvas id="ChromTrisCanvas" width="400" height="500"></canvas>
     <canvas id="ChromTrisOverlay" width="400" height="550"></canvas>
-    <img id="ChromTrisLoader" src="images/loader.gif" width="31" height="31"></div>    
+    <img id="ChromTrisLoader" src="images/loader.gif" width="31" height="31"></div>   
+	<pre id="ChromTrisConsole"></pre>
+    <pre id="ChromTrisErrorConsole"></pre> 	
     <div id="score"></div>
     <div id="footer"></div>
   </body>
